--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@azure/core-auth": "^1.10.1",
     "@base-ui/react": "^1.0.0",
     "@google/generative-ai": "^0.24.1",
+    "@types/ws": "^8.18.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "radix-ui": "^1.4.3",
@@ -23,7 +25,8 @@
     "react-qr-code": "^2.0.18",
     "shadcn": "^3.6.3",
     "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
