--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@base-ui/react": "^1.0.0",
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.95.3",
-    "@types/ws": "^8.18.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
@@ -26,8 +25,7 @@
     "react-qr-code": "^2.0.18",
     "shadcn": "^3.6.3",
     "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.4.0",
-    "ws": "^8.19.0"
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -36,6 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "supabase": "^2.76.8",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
