--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^12.9.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
