--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^12.9.0",
     "html2canvas": "^1.4.1",
+    "ioredis": "^5.9.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "radix-ui": "^1.4.3",
